// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component/sidebar/sidebar_channel_button_or_link/SidebarChannelButtonOrLink should match snapshot, on desktop with loading badge 1`] = `
<button
  className="btn btn-link test-class"
  onClick={[Function]}
>
  <SidebarChannelButtonOrLinkIcon
    channelId="test-channel-id"
    channelStatus="test"
    channelType="D"
    membersCount={3}
    teammateDeletedAt={2017-01-31T23:00:00.000Z}
    teammateId="test-teammate-id"
  />
  <span
    className="sidebar-item__name"
  >
    test-channel-name
  </span>
  <img
    className="channel-loading-gif pull-right"
    src={null}
  />
  <SidebarChannelButtonOrLinkCloseButton
    badge="loading"
    channelId="test-channel-id"
    channelType="D"
    handleClose={[Function]}
  />
</button>
`;

exports[`component/sidebar/sidebar_channel_button_or_link/SidebarChannelButtonOrLink should match snapshot, on desktop with mentions badge 1`] = `
<button
  className="btn btn-link test-class"
  onClick={[Function]}
>
  <SidebarChannelButtonOrLinkIcon
    channelId="test-channel-id"
    channelStatus="test"
    channelType="D"
    membersCount={3}
    teammateDeletedAt={2017-01-31T23:00:00.000Z}
    teammateId="test-teammate-id"
  />
  <span
    className="sidebar-item__name"
  >
    test-channel-name
  </span>
  <span
    className="badge"
  >
    6
  </span>
  <SidebarChannelButtonOrLinkCloseButton
    badge="mentions"
    channelId="test-channel-id"
    channelType="D"
    handleClose={[Function]}
  />
</button>
`;

exports[`component/sidebar/sidebar_channel_button_or_link/SidebarChannelButtonOrLink should match snapshot, on desktop without badge 1`] = `
<button
  className="btn btn-link test-class"
  onClick={[Function]}
>
  <SidebarChannelButtonOrLinkIcon
    channelId="test-channel-id"
    channelStatus="test"
    channelType="D"
    membersCount={3}
    teammateDeletedAt={2017-01-31T23:00:00.000Z}
    teammateId="test-teammate-id"
  />
  <span
    className="sidebar-item__name"
  >
    test-channel-name
  </span>
  <SidebarChannelButtonOrLinkCloseButton
    channelId="test-channel-id"
    channelType="D"
    handleClose={[Function]}
  />
</button>
`;

exports[`component/sidebar/sidebar_channel_button_or_link/SidebarChannelButtonOrLink should match snapshot, on non-desktop with loading badge 1`] = `
<Link
  className="test-class"
  onClick={[Function]}
  onlyActiveOnIndex={false}
  style={Object {}}
  to="test-link"
>
  <SidebarChannelButtonOrLinkIcon
    channelId="test-channel-id"
    channelStatus="test"
    channelType="D"
    membersCount={3}
    teammateDeletedAt={2017-01-31T23:00:00.000Z}
    teammateId="test-teammate-id"
  />
  <span
    className="sidebar-item__name"
  >
    test-channel-name
  </span>
  <img
    className="channel-loading-gif pull-right"
    src={null}
  />
  <SidebarChannelButtonOrLinkCloseButton
    badge="loading"
    channelId="test-channel-id"
    channelType="D"
    handleClose={[Function]}
  />
</Link>
`;

exports[`component/sidebar/sidebar_channel_button_or_link/SidebarChannelButtonOrLink should match snapshot, on non-desktop with mentions badge 1`] = `
<Link
  className="test-class"
  onClick={[Function]}
  onlyActiveOnIndex={false}
  style={Object {}}
  to="test-link"
>
  <SidebarChannelButtonOrLinkIcon
    channelId="test-channel-id"
    channelStatus="test"
    channelType="D"
    membersCount={3}
    teammateDeletedAt={2017-01-31T23:00:00.000Z}
    teammateId="test-teammate-id"
  />
  <span
    className="sidebar-item__name"
  >
    test-channel-name
  </span>
  <span
    className="badge"
  >
    6
  </span>
  <SidebarChannelButtonOrLinkCloseButton
    badge="mentions"
    channelId="test-channel-id"
    channelType="D"
    handleClose={[Function]}
  />
</Link>
`;

exports[`component/sidebar/sidebar_channel_button_or_link/SidebarChannelButtonOrLink should match snapshot, on non-desktop without badge 1`] = `
<Link
  className="test-class"
  onClick={[Function]}
  onlyActiveOnIndex={false}
  style={Object {}}
  to="test-link"
>
  <SidebarChannelButtonOrLinkIcon
    channelId="test-channel-id"
    channelStatus="test"
    channelType="D"
    membersCount={3}
    teammateDeletedAt={2017-01-31T23:00:00.000Z}
    teammateId="test-teammate-id"
  />
  <span
    className="sidebar-item__name"
  >
    test-channel-name
  </span>
  <SidebarChannelButtonOrLinkCloseButton
    channelId="test-channel-id"
    channelType="D"
    handleClose={[Function]}
  />
</Link>
`;
